@@ -293,4 +293,4 @@ AC_SUBST(NET_EXTRAFLAGS)
 # Output.
 AC_OUTPUT([Makefile stage1/Makefile stage2/Makefile docs/Makefile \
 	debian/Makefile lib/Makefile util/Makefile grub/Makefile \
-	netboot/Makefile])
+	netboot/Makefile util/grub-install])
