@@ -3,7 +3,7 @@ grub_TEXINFOS = tutorial.texi user-ref.texi prog-ref.texi \
 	appendices.texi
 EXAMPLES = boot.S kernel.c multiboot.h
 multiboot_TEXINFOS = boot.S.texi kernel.c.texi multiboot.h.texi
-man_MANS = grub.8 mbchk.1
+man_MANS = grub.8 mbchk.1 grub-install.8
 HELP2MAN = help2man
 SRC2TEXI = src2texi
 noinst_SCRIPTS = $(HELP2MAN) $(SRC2TEXI)
@@ -27,6 +27,11 @@ EXTRA_DIST = menu.lst $(man_MANS) $(noinst_SCRIPTS) \
 if MAINTAINER_MODE
 $(srcdir)/grub.8: ../grub/grub $(srcdir)/$(HELP2MAN)
 	$(PERL) $(srcdir)/$(HELP2MAN) --name="the grub shell" \
+		--section=8 --output=$@ $<
+
+$(srcdir)/grub-install.8: ../util/grub-install $(srcdir)/$(HELP2MAN)
+	chmod 755 $<
+	$(PERL) $(srcdir)/$(HELP2MAN) --name="install GRUB on your drive" \
 		--section=8 --output=$@ $<
 
 $(srcdir)/mbchk.1: ../util/mbchk $(srcdir)/$(HELP2MAN)
