@@ -1,0 +1,29 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.016.
+.TH GRUB-INSTALL "8" "November 1999" "grub-install (GNU GRUB 0.5.94)" FSF
+.SH NAME
+grub-install \- install GRUB on your drive
+.SH SYNOPSIS
+.B grub-install
+[\fIOPTION\fR] \fIinstall_device\fR
+.SH DESCRIPTION
+Install GRUB on your drive.
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+print this message and exit
+.TP
+\fB\-v\fR, \fB\-\-version\fR
+print the version information and exit
+.PP
+Reports bugs to <bug-grub@gnu.org>.
+.SH "SEE ALSO"
+The full documentation for
+.B grub-install
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B grub-install
+programs are properly installed at your site, the command
+.IP
+.B info grub-install
+.PP
+should give you access to the complete manual.
