@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.016.
-.TH GRUB "8" "October 1999" "GNU GRUB 0.5.94" FSF
+.TH GRUB "8" "November 1999" "GNU GRUB 0.5.94" FSF
 .SH NAME
 GRUB \- the grub shell
 .SH SYNOPSIS
@@ -18,7 +18,7 @@ specify stage2 boot_drive [default=0x0]
 specify stage2 config_file [default=/boot/grub/menu.lst]
 .TP
 \fB\-\-device\-map\fR=\fIFILE\fR
-specify the device map file [default=/boot/grub/device.map]
+Use the device map file FILE
 .TP
 \fB\-\-help\fR
 display this message and exit
