@@ -1,3 +1,3 @@
-@set UPDATED 26 October 1999
+@set UPDATED 18 November 1999
 @set EDITION 0.5.94
 @set VERSION 0.5.94
